--- a/vtigerforjenkins/pom.xml
+++ b/vtigerforjenkins/pom.xml
@@ -64,7 +64,7 @@
           <configuration>
            <suiteXmlFiles>
             <suiteXmlFile>
-         	  regressionTesttestng.xml
+         	  smokeTesttestng.xml
             </suiteXmlFile>
            </suiteXmlFiles>
           </configuration>
